--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -11,12 +11,11 @@ del, dfn, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd,
-fieldset, form, label, legend,
+fieldset, form, label,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+article, aside, canvas, details,  
+figure, figcaption, footer, header,
+menu, nav, section, {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -54,8 +53,6 @@ body {
 }
 h1, h2, h3, h4, h5, h6, header {
 	font-family: 'Yeseva One', sans-serif;
-}
-article {
 }
 header {
 	border-bottom: 1px solid rgb(221,221,221);
