--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -10,12 +10,12 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd,
-fieldset, form, label,
+dl, dt, dd,fieldset, form, label,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details,  
 figure, figcaption, footer, header,
-menu, nav, section, {
+menu, nav, section, 
+{
 	margin: 0;
 	padding: 0;
 	border: 0;
